--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: cpp
 compiler: gcc
 before_install: 
-- if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get update && sudo apt-get install libssl-dev cmake libboost-all-dev; fi
-- if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install openssl boost cmake && brew link --force openssl; fi
+- if [ $TRAVIS_OS_NAME == linux ]; then 
+       wget --no-check-certificate http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-i386.tar.gz
+    && tar -xzf cmake-3.3.2-Linux-i386.tar.gz
+    && sudo cp -fR cmake-3.3.2-Linux-i386/* /usr
+    && sudo apt-get update 
+    && sudo apt-get install libssl-dev libboost-all-dev
+    ; 
+  fi
+- if [ $TRAVIS_OS_NAME == osx ]; then 
+       brew update 
+    && brew install openssl boost 
+    && brew link --force openssl
+    ; 
+  fi
 script: cd build && cmake .. && make
 branches:
     only:
