--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 compiler: gcc
 before_install: 
 - if [ $TRAVIS_OS_NAME == linux ]; then 
-       sudo apt-add-repository -y george-edison55-precise-backports
+       sudo apt-add-repository -y ppa:george-edison55-precise-backports
     && sudo apt-get update 
     && sudo apt-get install libssl-dev libboost-all-dev cmake
     ; 
