--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: cpp
 compiler: gcc
 before_install: 
 - if [ $TRAVIS_OS_NAME == linux ]; then 
-       sudo add-apt-repository ppa:george-edison55/cmake-3.x --yes
+       wget --no-check-certificate http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-i386.tar.gz
+    && tar -xzf cmake-3.3.2-Linux-i386.tar.gz
+    && sudo cp -fR cmake-3.3.2-Linux-i386/* /usr
     && sudo apt-get update 
     && apt-cache search cmake
-    && sudo apt-get install libssl-dev libboost-all-dev cmake
+    && sudo apt-get install libssl-dev libboost-all-dev 
     ; 
   fi
 - if [ $TRAVIS_OS_NAME == osx ]; then 
